# aima-python

./: .coveragerc  .flake8  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  .utils.py.swp  ATT63381.gitignore  BFS for graph.ipynb  BackwardChaining.ipynb  BasicConceptsSearch.ipynb  CONTRIBUTING.md  Chapter-02-Intellegent-Agents.ipynb  Chapter-03-Solving-Problems-Searching.ipynb  Chapter-04-Searchin-Complex-Enviroment.ipynb  Chapter-05-Adversarial-Search-Games.ipynb  Chapter-06-Constraint-Satisfaction-Problems.ipynb  Chapter-07-Logical-Agents.ipynb  Chapter-09-Inference-in-First-Order-Logic.ipynb  Chapter-11-Automated-Planning.ipynb  Chapter-12-Quantifying-Uncertainty.ipynb  Chapter-13-Probabilistic-Reasoning.ipynb  Chapter-14-Probability-Reasoning-over-Time.ipynb  Chapter-17-Making-Complex-Decisions.ipynb  DecisionTreeLearning.ipynb  DeepNeuralNet4e.py  ForwardChaining.ipynb  Grassfire.py  HMM.ipynb  InferencePropLogic.ipynb  InformedSearch.ipynb  LICENSE  MANIFEST.in  MarkovDecisionProcess.ipynb  NeuralNetworks4e.py  ProjectHome.md  README.md  ReadMe.md  SGD with momentum.ipynb  SUBMODULE.md  (+152 more)
aima/: __init__.py  agents.py  agents4e.py  csp.py  deep_learning.py  deep_learning4e.py  games.py  games4e.py  ipyviews.py  knowledge.py  learning.py  learning4e.py  logic.py  logic4e.py  making_simple_decisions.py  making_simple_decisions4e.py  mdp.py  mdp4e.py  nlp.py  nlp4e.py  notebook4e.py  notebook_utils.py  planning.py  (+11 more)
aima-data/: LICENSE.md  README.md  gutenberg.txt  iris.csv  iris.txt  orings.csv  restaurant.csv
aima-python/: agents.py  doctests.py  planning.py
(+1087 files in other folders)
